--- a/2.2-databases-2/orm_migrations/templates/school/students_list.html
+++ b/2.2-databases-2/orm_migrations/templates/school/students_list.html
@@ -6,8 +6,13 @@
 <div class="row">
   <ul>
   {% for student in object_list %}
-    <li>{{ student.name }} {{ student.group }} <br> Преподаватель: {{ student.teacher.name }} {{ student.teacher.subject }}</li>
-  {% endfor %}
+                <p style="font-size: 20px">Студент:</p>
+                <li><p style="font-size: 16px">{{ student.name }} {{ student.group }}</p></li>
+                    <p style="font-size: 20px">Преподаватель:</p>
+                    {% for teacher in student.teachers.all %}
+                        <li>Преподаватель: {{ teacher.name }}  Предмет: {{ teacher.subject }}</li>
+                    {% endfor %}<br>
+            {% endfor %}
   </ul>
 </div>
 {% endblock %}
